# adapters/openai_agents/pyproject.toml
# ============================================================================
# Package: decision-gate-openai-agents
# Description: Decision Gate adapter for OpenAI Agents SDK tools.
# Purpose: Expose Decision Gate SDK calls as OpenAI Agents function tools.
# ============================================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-gate-openai-agents"
version = "0.1.0"
description = "Decision Gate OpenAI Agents SDK adapter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Decision Gate OSS" }]
dependencies = [
  "decision-gate>=0.1.0",
  "openai-agents>=0.1.0",
]

[tool.setuptools]
packages = ["decision_gate_openai_agents"]

[tool.setuptools.package-data]
decision_gate_openai_agents = ["py.typed"]
