# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate Contract manifest (workspace-aligned dependencies)
# ============================================================================
# Lint settings are defined here for standalone builds; workspace profiles
# are owned by the workspace root when building inside the workspace.
# Dependency versions are sourced from workspace metadata when available.
# ============================================================================

[package]
name = "decision-gate-contract"
version = { workspace = true }
license = { workspace = true }
edition = "2024"
rust-version = "1.92"

[[bin]]
name = "decision-gate-contract"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
decision-gate-config = { workspace = true }
decision-gate-core = { workspace = true }
jsonschema = { workspace = true }
ron = { workspace = true }
ret-logic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
url = { workspace = true }

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unused_must_use = "deny"
dead_code = "deny"
unreachable_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "deny"
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
exit = "deny"
mem_forget = "deny"
panic_in_result_fn = "deny"
unwrap_in_result = "deny"
print_stdout = "deny"
print_stderr = "deny"
use_debug = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
bare_urls = "warn"
