# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate LLM Scenario Example manifest

[package]
name = "decision-gate-example-llm-scenario"
version = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
decision-gate-core = { path = "../../decision-gate-core" }
decision-gate-broker = { path = "../../decision-gate-broker" }
ret-logic = { path = "../../ret-logic" }
serde_json = "1.0"

[lints]
workspace = true
