# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate LLM Scenario Example manifest

[package]
name = "decision-gate-example-llm-scenario"
version = { workspace = true }
license = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
decision-gate-core = { path = "../../decision-gate-core", version = "0.1.0" }
decision-gate-broker = { path = "../../decision-gate-broker", version = "0.1.0" }
ret-logic = { path = "../../ret-logic", version = "0.1.0" }
serde_json = "1.0"

[lints]
workspace = true
