# Copyright (c) 2026 Michael Campbell. All rights reserved.
# Decision Gate Minimal Example manifest

[package]
name = "decision-gate-example-minimal"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
decision-gate-core = { path = "../../decision-gate-core" }
ret-logic = { path = "../../ret-logic" }
serde_json = "1.0"
