# Decision Gate Enterprise Store manifest
# ============================================================================
# Private multi-tenant storage backends for Decision Gate enterprise.
# ============================================================================

[package]
name = "decision-gate-store-enterprise"
version = { workspace = true }
edition = "2024"
rust-version = "1.92"

[dependencies]
decision-gate-core = { path = "../../decision-gate-core" }
decision-gate-store-sqlite = { path = "../../decision-gate-store-sqlite" }
postgres = "0.19"
postgres-types = { version = "0.2", features = ["serde_json-1"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
aws-config = { version = "1.1", optional = true }
aws-sdk-s3 = { version = "1.60", optional = true }
aws-smithy-types = { version = "1.3", optional = true }
sha2 = { version = "0.10", optional = true }
tar = { version = "0.4", optional = true }
tempfile = { version = "3.10", optional = true }
tokio = { version = "1.43", features = ["fs", "io-util", "rt-multi-thread"], optional = true }

[features]
default = []
s3 = ["aws-config", "aws-sdk-s3", "aws-smithy-types", "sha2", "tar", "tempfile", "tokio"]

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.10"
