# Decision Gate Enterprise System Tests manifest
# ============================================================================
# Private system tests for enterprise features and managed cloud behavior.
# ============================================================================

[package]
name = "enterprise-system-tests"
version = { workspace = true }
edition = "2024"
rust-version = "1.92"
publish = false
autotests = false

[dependencies]
aws-config = "1.1"
aws-sdk-s3 = "1.60"
decision-gate-contract = { path = "../../decision-gate-contract" }
decision-gate-core = { path = "../../decision-gate-core" }
decision-gate-enterprise = { path = "../decision-gate-enterprise" }
decision-gate-mcp = { path = "../../decision-gate-mcp" }
decision-gate-store-enterprise = { path = "../decision-gate-store-enterprise", features = ["s3"] }
once_cell = "1.19"
postgres = "0.19"
ret-logic = { path = "../../ret-logic" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1.0"
tar = "0.4"
tempfile = "3.10"
testcontainers = "0.15"
tokio = { version = "1.43", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"

[dev-dependencies]

[lints]
workspace = true

[features]
enterprise-system-tests = []

[[test]]
name = "config"
path = "tests/config.rs"
required-features = ["enterprise-system-tests"]

[[test]]
name = "security"
path = "tests/security.rs"
required-features = ["enterprise-system-tests"]

[[test]]
name = "tenancy"
path = "tests/tenancy.rs"
required-features = ["enterprise-system-tests"]

[[test]]
name = "usage"
path = "tests/usage.rs"
required-features = ["enterprise-system-tests"]

[[test]]
name = "audit"
path = "tests/audit.rs"
required-features = ["enterprise-system-tests"]

[[test]]
name = "storage_postgres"
path = "tests/storage_postgres.rs"
required-features = ["enterprise-system-tests"]

[[test]]
name = "storage_s3"
path = "tests/storage_s3.rs"
required-features = ["enterprise-system-tests"]

[[test]]
name = "runpack"
path = "tests/runpack.rs"
required-features = ["enterprise-system-tests"]

[[test]]
name = "mcp_transport"
path = "tests/mcp_transport.rs"
required-features = ["enterprise-system-tests"]

[[test]]
name = "recovery"
path = "tests/recovery.rs"
required-features = ["enterprise-system-tests"]
